--- a/README
+++ b/README
@@ -2,7 +2,7 @@
 # 	Simple Spell Checker			#
 #	By Mayank Gupta				#
 #	mayankrocks.1993@gmail.com		#
-#	mayank.g@students.iiit.in		#
+#	mayank.g@students.iiit.ac.in		#
 #################################################
 
 It use as dictionary as file "words.txt".
